# CS303-Artificial-Intelligence

./: .gitignore  pyproject.toml
Labs/Practice1/: problem3.ipynb
Labs/Practice10/: LogisticRegression.ipynb
Labs/Practice12&13/Practice12_ANN/: ArtificialNeuralNetwork.ipynb
Labs/Practice2/: Practice2-Numpy.ipynb
Labs/Practice6&7/: CSP_practice.ipynb
Practice1/: problem1.ipynb  problem2.ipynb
Practice11/Practice11 - Credit Card Fraud Detection Using SVM/: Practice11 - Credit Card Fraud Detection using SVM.ipynb
Practice12/Practice12_ANN/: ArtificialNeuralNetwork.ipynb
Practice3&4/: agent.py
Practice3&4/MCTS/: MCTS(Bonus).ipynb
Practice5/: adv_search.ipynb
Practice6&7/: CSP_practice.ipynb
Practice8/Practice8/: Genetic_Algorithm.ipynb
Practice9/PracticeMin-Conflict/: MinConflict_practice.ipynb
Project1/: agent.py
Project2/: README.md  preprocess.py  testlabel.txt  train_logistic.py  train_mlp.py  train_xgb.py
UninformedSearch/: BFS.py  DFS.py  DLS.py  IDS.py  UCS.py
