[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio==2.20.0",
    "imbalanced-learn>=0.14.0",
    "matplotlib>=3.9.4",
    "numba>=0.62.1",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pygame>=2.6.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tomli>=2.3.0",
]
